# EDA

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  synctest.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  PARAMETERS.md
eda/: __init__.py  config.py  server.py
eda/api/: deps.py  main.py  schemas.py  security.py
eda/api/routers/: activations.py  alarms.py  health.py  metrics.py  network_elements.py  templates.py
eda/cli/: client.py  main.py
eda/core/: engine.py  metrics.py  models.py  store.py
examples/: activation_with_failure.json  batch_activation.json  ne_register.json  template_vlan_activation.json
heat/: eda_vne.yaml  env.yaml.sample
parameters/: eda_parameters.json
tests/: conftest.py  test_api.py  test_cli.py  test_engine.py  test_new_features.py
